--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-main-header>
+<app-main-header (onClickCart)="onClickCart($event)">
 </app-main-header>
 <div class="container">
     <div class="row">
